# slipc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
.zed/: tasks.json
include/: slipc.h  slipc_io.h
src/: slipc.c  slipc_io.c
test/: CMakeLists.txt  callsit.c  callsit.h  test_d_slipc.cc  test_slipc.cc  test_tromp.cc  thing.c  thing.h
test/catch2/: CMakeLists.txt
test/doctest/: CMakeLists.txt
test/trompeloeil/: CMakeLists.txt
